kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jakeac
  namespace: jakeac
  labels:
    app.kubernetes.io/name: jakeac
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: jakeac
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jakeac
    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: jakeac
          image: ghcr.io/jake-jenkins/www.jake.ac:main-1 # {"$imagepolicy": "flux-system:jakeac"}
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          startupProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 5
            failureThreshold: 12
          readinessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 30
            failureThreshold: 3
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
            limits:
              cpu: 200m
              memory: 64Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
          volumeMounts:
            - name: nginx-tmp
              mountPath: /tmp
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: nginx-tmp
          emptyDir: {}
