kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jakeac
  namespace: jakeac
  labels:
    app.kubernetes.io/name: jakeac
spec:
  selector:
    app.kubernetes.io/name: jakeac
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
